# wrap-preview

./: .gitignore  BETA_FIXES_REPORT.md  BRANDING_GUIDE.md  CERTIFICATION_PATCH_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTACT_SHEET_CERTIFICATION_REPORT.md  EQUIP_LIST.md  FULL_APPLICATION_OPERATIONAL_AUDIT_REPORT.md  KNOWN_ISSUES.md  POST_2026-02-19_AUDIT_AND_PATCH_REPORT.md  README.md  V1_BETA_TEST_CHECKLIST.md  WRAP_PREVIEW_ARCHITECTURE_STATUS.md  WRAP_PREVIEW_FEATURE_STATUS.md  WRAP_PREVIEW_SUITE_GUIDE.md  WrapPreview.icns  WrapPreview_v1.0.0-beta.1_README.md  debug_b64.cjs  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json  windows-app.manifest
src-tauri/Frameworks/ACFPluginHost.framework/: ACFPluginHost
src-tauri/Frameworks/ACFPluginHost.framework/Versions/A/: ACFPluginHost
src-tauri/Frameworks/FTF.framework/: FTF
src-tauri/Frameworks/QtConcurrent.framework/Versions/5/: QtConcurrent
src-tauri/Frameworks/QtDBus.framework/Versions/5/: QtDBus
src-tauri/Frameworks/QtMultimedia.framework/Versions/5/: QtMultimedia
src-tauri/Frameworks/QtMultimediaWidgets.framework/Versions/5/: QtMultimediaWidgets
src-tauri/Frameworks/QtNetwork.framework/Versions/5/: QtNetwork
src-tauri/Frameworks/QtOpenGL.framework/Versions/5/: QtOpenGL
src-tauri/Frameworks/QtPrintSupport.framework/Versions/5/: QtPrintSupport
src-tauri/Frameworks/QtQuick.framework/Versions/5/: QtQuick
src-tauri/Frameworks/QtScript.framework/Versions/5/: QtScript
src-tauri/Frameworks/QtSql.framework/Versions/5/: QtSql
src-tauri/Frameworks/QtWebChannel.framework/Versions/5/: QtWebChannel
src-tauri/Frameworks/QtXml.framework/Versions/5/: QtXml
src-tauri/Frameworks/QtXmlPatterns.framework/Versions/5/: QtXmlPatterns
src-tauri/Frameworks/SDL2.framework/Versions/A/: SDL2
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/libs/: gk.dylib  libAMAUtilLib20.dylib  libAvOmfToolkit.dylib  libIMEHost.dylib  libIMEX.dylib  libIMF_SDK_1.1.16.dylib  libaafintp.dylib  libaafpgapi.dylib  libboost_chrono-clang-darwin110-mt-x64-1_70.dylib  libboost_date_time-clang-darwin110-mt-x64-1_70.dylib  libboost_filesystem-clang-darwin110-mt-x64-1_70.dylib  libboost_iostreams-clang-darwin110-mt-x64-1_70.dylib  libboost_locale-clang-darwin110-mt-x64-1_70.dylib  libboost_system-clang-darwin110-mt-x64-1_70.dylib  libboost_thread-clang-darwin110-mt-x64-1_70.dylib  libcurl.dylib  libjpegV4.dylib  liblog4cplus_2.0.6_U.dylib  libmpg123.0.dylib  libpicco_1.0.0.54.dylib  libtbb.dylib  libtbbmalloc.dylib  libturbojpeg-1.5.2.dylib  libxalan-c.112.dylib  libxalanMsg.dylib  libxerces-c_3.2.3.dylib  mt.dylib
src-tauri/resources/: camera_profiles.json  look_presets.json
src-tauri/src/: audio.rs  clustering.rs  commands.rs  db.rs  export.rs  ffprobe.rs  folders.rs  jobs.rs  lib.rs  license.rs  lut.rs  main.rs  production.rs  production_calibration.rs  production_match_lab.rs  scanner.rs  thumbnail.rs  tools.rs  verification.rs
src-tauri/src/review_core/: processor.rs  server.rs  storage.rs
(+137 files in other folders)
