[package]
name = "wrap-preview"
version = "1.0.0"
description = "Wrap Preview — Video Contact Sheet Generator"
authors = ["you"]
edition = "2021"

[lib]
name = "wrap_preview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = { version = "0.4", features = ["clock"] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
sha2 = "0.10"
blake3 = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rayon = "1.10"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
base64 = "0.22"
dirs-next = "2"
printpdf = { version = "0.7", features = ["embedded_images"] }
zip = "2"
image = { version = "0.24", features = ["png", "jpeg"] }
bcrypt = "0.15"
rand = "0.8"
trash = "5"
opencv = { version = "0.92", default-features = false, features = ["clang-runtime", "imgcodecs", "imgproc"] }
