[package]
name = "cineflow-suite"
version = "1.0.3"
description = "CineFlow Suite — The Production to Post Hub"
authors = ["Alan Alves <hello@expose-u.com>"]
homepage = "https://alan-design.com/"
edition = "2021"

[lib]
name = "cineflow_suite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = { version = "0.4", features = ["clock"] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
sha2 = "0.10"
blake3 = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rayon = "1.10"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
base64 = "0.22"
dirs-next = "2"
printpdf = { version = "0.7", features = ["embedded_images"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
image = { version = "0.24", features = ["png", "jpeg"] }
bcrypt = "0.15"
rand = "0.8"
trash = "5"
opencv = { version = "0.92", optional = true, default-features = false, features = ["clang-runtime", "imgcodecs", "imgproc"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[features]
default = []
calibration = ["dep:opencv"]

[profile.release]
lto = true
codegen-units = 1
panic = "unwind"
# strip removed: on MSVC symbols live in a separate .pdb; keeping it allows
# crash dump analysis with WinDbg. Re-add strip = "symbols" after the crash
# is diagnosed and fixed.
opt-level = 3

[lints.rust]
unexpected_cfgs = "allow"
